removed overflow on the app and fixed the backend url

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -60,3 +60,6 @@ input[type=number] {
     background-color: lighten($font, 30);
   }
 }
+div#app{
+  overflow-y: hidden;
+}
